# sentry-mobile-enroll-android

./: README.md  deployKey.keystore
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: finger_bottom.xml  finger_bottom_dark.xml  finger_center.xml  finger_center_dark.xml  finger_left_dark.xml  finger_right_dark.xml  finger_top.xml  ic_biometric_step_1.xml  sentrycard_outline.xml
app/src/main/res/raw/: attach_card.json  attach_card_large_black.json  attach_card_large_light.json
app/src/main/res/values/: strings.xml  styles.xml
sdk/: build.gradle.kts
sdk/src/main/cpp/LibSdkWallet/: constants.h  hal_hmac.c  hal_hmac.h  preliminary.c  ripemd160.c  sha3.c  sha512.h
sdk/src/main/cpp/LibSecureChannel/: curve-specific.h  platform-specific.h  secure.h  uECC_vli.h  wrapper.h
src/CryptoWallet/: .gitignore  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
src/CryptoWallet/JCWKit/: build.gradle  build.gradle.kts
src/CryptoWallet/JCWKit/src/main/cpp/: CMakeLists.txt  libsdkmain.c  libsdkmain.h
src/CryptoWallet/JCWKit/src/main/cpp/LibSdkEnrollment/: lib_sdk_enroll.c  lib_sdk_enroll.h
src/CryptoWallet/JCWKit/src/main/cpp/LibSdkWallet/: bip39.c  bip39.h  constants.h  lib_sdk_wallet.c  lib_wallet.h
src/CryptoWallet/JCWKit/src/main/cpp/LibSecureChannel/: aes.c  aes.h  cmac.c  cmac.h  curve-specific.h  platform-specific.h  secure.c  secure.h  sha.c  sha.h  uECC.c  uECC.h  uECC_vli.h  uecc_types.h  wrapper.c  wrapper.h
src/CryptoWallet/JCWKit/src/main/cpp/LibSupport/: support.c  support.h
src/CryptoWallet/app/: build.gradle  build.gradle.kts  proguard-rules.pro
src/CryptoWallet/app/src/MK/res/drawable/: bg_button_blue.xml  bg_button_outlined.xml
src/CryptoWallet/app/src/MK/res/values/: colors.xml  styles.xml
src/CryptoWallet/app/src/main/: AndroidManifest.xml
src/CryptoWallet/app/src/main/res/anim/: pin_error.xml
src/CryptoWallet/app/src/main/res/color/: color_surface_60.xml  color_text_button_blue.xml  color_text_button_outlined.xml
src/CryptoWallet/app/src/main/res/drawable/: bg_account_menu.xml  bg_button_blue.xml  bg_button_outlined.xml  bg_field.xml  bg_home_tabs.xml  bg_more_actions.xml  bg_number.xml  bg_onboarding_indicator.xml  bg_onboarding_indicator_default.xml  bg_onboarding_indicator_selected.xml  bg_pin_button.xml  bg_pin_dot.xml  bg_primary_balance.xml  bg_qr_code.xml  bg_search.xml  bg_seed_agreement.xml  bg_seed_phrase.xml  bg_seed_phrase_cover.xml  bg_seed_word.xml  bg_seed_word_checked.xml  bg_seed_word_error.xml  bg_surface.xml  divider.xml  finger_left.xml  finger_right.xml  finger_top_dark.xml  ic_action_buy.xml  ic_action_cash_out.xml  ic_action_copy.xml  ic_action_copy_default.xml  ic_action_copy_pressed.xml  ic_action_more.xml  ic_action_more_default.xml  ic_action_more_pressed.xml  ic_action_receive.xml  ic_action_receive_default.xml  ic_action_receive_pressed.xml  ic_action_send.xml  ic_action_send_default.xml  ic_action_send_pressed.xml  (+53 more)
src/CryptoWallet/app/src/main/res/layout/: activity_biometric_enrollment.xml  activity_first_attach_card.xml  activity_fragment_attach_card_nfc.xml  activity_main.xml  dialog_more_actions.xml  fragment_auto_lock_settings.xml  fragment_biometric_begin.xml  fragment_biometric_description.xml  fragment_biometric_done.xml  fragment_biometric_finger_enroll.xml  fragment_biometric_tutorial.xml  fragment_change_pin.xml  fragment_change_pin_success.xml  fragment_choose_mnemonic_count.xml  fragment_choose_token_to_send.xml  fragment_choose_wallet_restore.xml  fragment_confirm_transaction.xml  fragment_create_pin.xml  fragment_create_wallet_begin_biometric.xml  fragment_create_wallet_begin_pin.xml  (+40 more)
src/CryptoWallet/bitcoincore/: build.gradle
src/CryptoWallet/bitcoinkit/: build.gradle
src/CryptoWallet/ethereumkit/: build.gradle
src/CryptoWallet/gradle/: libs.versions.toml
src/CryptoWallet/gradle/wrapper/: gradle-wrapper.properties
src/CryptoWallet/hodler/: build.gradle
src/CryptoWallet/sdk/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
src/CryptoWallet/sdk/src/main/cpp/: CMakeLists.txt
(+331 files in other folders)
